--- a/src/component/List/List.module.css
+++ b/src/component/List/List.module.css
@@ -1,7 +1,13 @@
+.list-container {
+  display: grid;
+  place-content: center;
+}
+
 .user-list {
   list-style: none;
   margin: 0;
   padding: 0;
+  width: 600px;
 }
 
 .user-item {
